// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render data with pencil button when onItemEdit callback is passed 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerButtonCell headerCell"
          >
            <span>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </span>
          </th>
          <th
            class="headerCell"
          >
            <span>
              title
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </td>
          <td
            class="cell"
          >
            Title 1
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </td>
          <td
            class="cell"
          >
            Title 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 1 of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-arrow-left"
        class="su-arrow-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-arrow-right"
        class="su-arrow-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell"
          >
            <span>
              title
            </span>
          </th>
          <th
            class="headerCell"
          >
            <span>
              description
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            Title 1
          </td>
          <td
            class="cell"
          >
            Description 1
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            Title 2
          </td>
          <td
            class="cell"
          >
            Description 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 2 of 5
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-arrow-left"
        class="su-arrow-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-arrow-right"
        class="su-arrow-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema and selections 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell"
          >
            <span>
              <label
                class="label"
              >
                <span
                  class="switch checkbox light"
                >
                  <input
                    type="checkbox"
                  />
                  <span />
                </span>
              </label>
            </span>
          </th>
          <th
            class="headerCell"
          >
            <span>
              title
            </span>
          </th>
          <th
            class="headerCell"
          >
            <span>
              description
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell small"
          >
            <label
              class="label"
            >
              <span
                class="switch checkbox dark"
              >
                <input
                  checked=""
                  type="checkbox"
                  value="1"
                />
                <span>
                  <span
                    aria-label="su-checkmark"
                    class="su-checkmark"
                  />
                </span>
              </span>
            </label>
          </td>
          <td
            class="cell"
          >
            Title 1
          </td>
          <td
            class="cell"
          >
            Description 1
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell small"
          >
            <label
              class="label"
            >
              <span
                class="switch checkbox dark"
              >
                <input
                  type="checkbox"
                  value="2"
                />
                <span />
              </span>
            </label>
          </td>
          <td
            class="cell"
          >
            Title 2
          </td>
          <td
            class="cell"
          >
            Description 2
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell small"
          >
            <label
              class="label"
            >
              <span
                class="switch checkbox dark"
              >
                <input
                  checked=""
                  type="checkbox"
                  value="3"
                />
                <span>
                  <span
                    aria-label="su-checkmark"
                    class="su-checkmark"
                  />
                </span>
              </span>
            </label>
          </td>
          <td
            class="cell"
          >
            Title 3
          </td>
          <td
            class="cell"
          >
            Description 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 1 of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-arrow-left"
        class="su-arrow-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-arrow-right"
        class="su-arrow-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema in different order 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell"
          >
            <span>
              description
            </span>
          </th>
          <th
            class="headerCell"
          >
            <span>
              title
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            Description 1
          </td>
          <td
            class="cell"
          >
            Title 1
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            Description 2
          </td>
          <td
            class="cell"
          >
            Title 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 2 of 3
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-arrow-left"
        class="su-arrow-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-arrow-right"
        class="su-arrow-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema not containing all fields 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell"
          >
            <span>
              title
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            Title 1
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            Title 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 1 of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-arrow-left"
        class="su-arrow-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-arrow-right"
        class="su-arrow-right"
      />
    </button>
  </nav>
</section>
`;
